--- a/Tutorial-2/my-first-react-project/src/App.css
+++ b/Tutorial-2/my-first-react-project/src/App.css
@@ -52,11 +52,29 @@
   border: rgb(226, 232, 236) 2px solid;
   border-radius: 10px;
   padding: 20px;
-  width: 500px;
+  width: 600px;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-#imageComponent {
+.imageComponent {
   border-radius: 5px;
+}
+
+.Card-Sale {
+  color: red;
+}
+.Card-Sale-Glow {
+  box-shadow: 0 0 10px 5px #61dafbaa;
+}
+@media screen and (max-width: 700px) {
+  .main-container {
+    flex-direction: column;
+    width: 300px;
+    margin: auto;
+  }
+  .Card-Component {
+    width: 90%;
+    margin: 20px;
+  }
 }
