--- a/Lab_2/lab-2/src/App.css
+++ b/Lab_2/lab-2/src/App.css
@@ -56,6 +56,9 @@ p {
 }
 
 @media screen and (max-width: 1140px) {
+  h1 {
+    margin-top: 0;
+  }
   .main-component {
     flex-direction: column;
     max-width: 400px;
